--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -122,7 +122,7 @@ input, select, textarea {
 
 	strong, b {
 		color: #555;
-		font-weight: 400;
+		font-weight: 800;
 	}
 
 	em, i {
@@ -2350,8 +2350,7 @@ input, select, textarea {
 /* Image */
 
 	.image {
-		border-radius: 4px;
-		border: 2px solid #666;
+		border: 0.5px solid #666;
 		display: inline-block;
 		position: relative;
 	}
@@ -3695,4 +3694,27 @@ input, select, textarea {
 
 #back-skills {
 	padding-top: 3em;
+}
+
+.projects-group {
+	margin: 0; 
+}
+
+.content-for-overlay {
+	width: 100%;
+	height: 100%; 
+	top: 0;
+	left: 0;
+	position: absolute;
+	background: rgba(0, 0, 0, 0.6);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	opacity: 0;
+	transition: 0.6s;
+}
+
+.content-for-overlay:hover {
+	opacity: 1;
 }
